Trying to fix head image jumping around a little

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,13 @@ body {
    }
 }
 
+@media screen and (max-width: 768px) {
+   #headImage {
+      background-position-x: 50%;
+      background-position-y: top;
+   }
+}
+
 #sideInfoHead {
    position: fixed;
    top: 0;
@@ -255,6 +262,7 @@ a {
       margin-bottom: 0px;
    }
    p {
+      margin-top: 0px;
       width: 500px;
       text-align: center;
    }
@@ -273,7 +281,7 @@ a {
    background-position-y: 50%;
    background-repeat: no-repeat;
    width: 100%;
-   height: 650px;
+   height: 750px;
    position: relative;
    z-index: 14;
    font-family: 'Playfair Display';
@@ -282,7 +290,7 @@ a {
 #whiteFilter {
    z-index: 2;
    width: 100%;
-   height: 650px;
+   height: 750px;
    position: absolute;
    background-color: rgba(255, 255, 255, 0.85);
 }
@@ -314,7 +322,7 @@ a {
 }
 
 #menuDivider {
-   height: 350px;
+   height: 400px;
    width: 1px;
    background-color: black;
 }
@@ -743,31 +751,32 @@ a {
 }
 
 #galleryContainer {
-   width: 90%;
+   width: 80%;
+   max-width: 1200px;
    text-align: center;
-   padding-top: 14px;
-   padding-bottom: 14px;
+   padding-top: 15px;
+   padding-bottom: 15px;
    display: inline-block;
 }
 
 .image {
    width: 250px;
-   height: 250px;
-   margin: 14px;
+   height: 230px;
+   margin: 15px;
    padding: 0px;
    display: inline-block;
    div {
       position: absolute;
       z-index: 2;
       width: 250px;
-      height: 250px;
+      height: 230px;
       &:hover {
          background-color: rgba(0, 0, 0, 0.5);
       }
    }
    img {
       width: 250px;
-      height: 250px;
+      height: 230px;
       object-fit: cover;
    }
 }
@@ -858,7 +867,8 @@ a {
 #photoBrowser {
    position: fixed;
    top: 0px;
-   background-color: rgba(0, 0, 0, 0.5);
+   left: 0px;
+   background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    height: 100%;
    display: flex;
@@ -868,6 +878,7 @@ a {
 
 #closePhotoBrowser {
    position: fixed;
+   z-index: 2;
    top: 0px;
    right: 20px;
    font-size: 70px;
@@ -889,10 +900,14 @@ a {
 #browseLeft {
    height: 70%;
    width: 300px;
+   position: fixed;
+   z-index: 2;
+   &:hover {
+      cursor: pointer;
+   }
    
    p {
-      
-      color: rgba(255, 255, 255, 0.5);
+      color: rgba(255, 255, 255, 0.6);
       transform: rotate(180deg);
       font-size: 60px;
       width: 100px;
@@ -908,6 +923,9 @@ a {
 #browseRight {
    height: 70%;
    width: 300px;
+   position: fixed;
+   right: 0;
+   z-index: 2;
    &:hover {
       cursor: pointer;
    }
@@ -923,5 +941,20 @@ a {
       justify-content: center;
       align-items: center;
       float: right;
+   }
+}
+
+#photoLineupContainer {
+   position: fixed;
+   left: 29vw; // Subtract/add image + margin x2: 44vw;
+   display: flex;
+   align-items: center;
+}
+
+#photoLineup {
+   margin: 2vw;
+   img {
+      width: 40vw;
+      object-fit: cover;
    }
 }
